# EloniFrameWork

./: .project  Doxyfile  Doxygen.warnings  Makefile.am  Makefile.in  README.md  configure  configure.ac
doc/html/: ConfigurationManager_8cpp_source.html  ConfigurationManager_8h.html  ConfigurationManager_8h__dep__incl.map  ConfigurationManager_8h__dep__incl.md5  ConfigurationManager_8h__incl.map  ConfigurationManager_8h__incl.md5  ConfigurationManager_8h_source.html  DatabaseManager_8cpp_source.html  DatabaseManager_8h.html  DatabaseManager_8h__dep__incl.map  DatabaseManager_8h__dep__incl.md5  DatabaseManager_8h__incl.map  DatabaseManager_8h__incl.md5  DatabaseManager_8h_source.html  EloniFrameWork_8cpp_source.html  EloniFrameWork_8h_source.html  EloniFramework.tag  Includes_8h_source.html  SecurityManager_8cpp_source.html  SecurityManager_8h.html  SecurityManager_8h__dep__incl.map  SecurityManager_8h__dep__incl.md5  SecurityManager_8h__incl.map  SecurityManager_8h__incl.md5  SecurityManager_8h_source.html  ShellManager_8cpp_source.html  ShellManager_8h.html  ShellManager_8h__dep__incl.map  ShellManager_8h__dep__incl.md5  ShellManager_8h__incl.map  ShellManager_8h__incl.md5  ShellManager_8h_source.html  annotated.html  annotated.js  classConfigurationManager-members.html  classConfigurationManager.html  classConfigurationManager.js  classConfigurationManager_ad3e85ee715420c432cd7545c6aaf8314_cgraph.map  classConfigurationManager_ad3e85ee715420c432cd7545c6aaf8314_cgraph.md5  classDatabaseManager-members.html  (+39 more)
doc/latex/: ConfigurationManager_8cpp_source.tex  ConfigurationManager_8h.tex  ConfigurationManager_8h__dep__incl.md5  ConfigurationManager_8h__incl.md5  ConfigurationManager_8h_source.tex  DatabaseManager_8cpp_source.tex  DatabaseManager_8h.tex  DatabaseManager_8h__dep__incl.md5  DatabaseManager_8h__incl.md5  DatabaseManager_8h_source.tex  EloniFrameWork_8cpp_source.tex  EloniFrameWork_8h_source.tex  Includes_8h_source.tex  Makefile  SecurityManager_8cpp_source.tex  SecurityManager_8h.tex  SecurityManager_8h__dep__incl.md5  SecurityManager_8h__incl.md5  SecurityManager_8h_source.tex  ShellManager_8cpp_source.tex  ShellManager_8h.tex  ShellManager_8h__dep__incl.md5  ShellManager_8h__incl.md5  ShellManager_8h_source.tex  annotated.tex  classConfigurationManager.tex  classConfigurationManager_ad3e85ee715420c432cd7545c6aaf8314_cgraph.md5  classDatabaseManager.tex  classDatabaseManager_a37b1f9148ca1b698c73a98bece97cd35_cgraph.md5  classDatabaseManager_adefb1bdb51d7b23d4b3a446a3f22ea26_cgraph.md5  classEloniFramework.tex  classSecurityManager.tex  classSecurityManager_a05f3c7fc498871277a00dffa092614c1_cgraph.md5  classSecurityManager_a2950edc6463999ceca399d47023adddc_cgraph.md5  classSecurityManager_abda859f83e39977a46ce993970a35f92_cgraph.md5  classShellManager.tex  (+8 more)
example/: Makefile  main.cpp
inc/: ConfigurationManager.h  DatabaseManager.h  EloniFrameWork.h  Includes.h  SecurityManager.h  ShellManager.h
src/: ConfigurationManager.cpp  DatabaseManager.cpp  EloniFrameWork.cpp  SecurityManager.cpp  ShellManager.cpp
(+23 files in other folders)
